# cryptocurrency-trade-simulator

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.dev  README.md  build.sh  conanfile.txt  docker-compose.yml  docker_readme.md  setup_gpu_dependencies.sh  test_volatility.cpp  test_volatility_simple.cpp  volatility_simple_test
documentation/: diagram.tex  generate_workflow_fixed.py  generate_workflow_white.py  krrishchoudhary_resume.tex  technical_documentation.aux  technical_documentation.tex  technical_documentation.tex.bak  technical_documentation.toc  transformer_model.md
gpu/: CudaTransformerKernels.cu  CudaTransformerKernels.h  CudaUtils.cpp
include/: AdvancedTransformerModel.h  OrderBook.h  TradeSimulator.h  TransformerModel.h  WebSocketClient.h
models/: AlmgrenChriss.cpp  AlmgrenChriss.h  FeeModel.cpp  FeeModel.h  RegressionModels.cpp  RegressionModels.h
resources/: DOCUMENTATION.md  config.json
src/: AdvancedTransformerModel.cpp  OrderBook.cpp  TradeSimulator.cpp  TransformerModel.cpp  WebSocketClient.cpp  main.cpp
ui/: UserInterface.cpp  UserInterface.h
